:bug: Fix ant design SVG icon not centered

--- a/src/index.css
+++ b/src/index.css
@@ -133,3 +133,5 @@ body {
 #root * {
     border: 1px solid red;
 }*/
+
+svg { vertical-align: baseline; }
